[package]
name = "arbitrary-chunks"
description = "An iterator that allows specifying an input array of arbitrary chunk-sizes with which to split a vector or array."
version = "0.3.0"
authors = ["Nathan Essex <nathan@essex.id.au>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Nessex/arbitrary-chunks"
homepage = "https://github.com/Nessex/arbitrary-chunks"
categories = ["data-structures","algorithms"]
keywords = ["iterator","chunk"]
documentation = "https://docs.rs/arbitrary-chunks/"

[dev-dependencies]
rayon = "1.5.1"
